# ThreadSpace-Nexus

./: .gitmodules  README.md  concept-map.llm  kimis-plan.llm  task-list.llm  threadspace-monorepo.llm
python/guardian_mcp/: # 📜 PulseOS Ritual Commit.md  .env.example  .gitignore  .pre-commit-config.yaml  AXIS_SECURITY_HARDENING.md  AXIS_SYSTEM_PROMPT.md  CHANGELOG.md  CLI_commands.txt  CODING_GUIDELINES.md  Codexify_Cloud_Plugin_Distribution_Terms.md  Companion_Codex_Notion_Structure.json  Dependency_Ritual.md  FINAL_PYTEST_PATCH_DELIVERABLE.md  Final_pytest_Error_Sweep.md  GEMINI_INSTRUCTIONS.md  GIT_CI_README.md  GUARDIAN_RITUAL_SWEEP_COMMIT.md  HOTBOX_NOTES.md  KEEPER.md  LICENSE  MODULE_CLUSTER.md  NOTES.md  PLUGIN_SDK_GUIDELINES.md  PYTEST_FIXES_SUMMARY.md  README.md  THREADSPACE_SYSTEM_MAP.md  TRANSLATOR.md  ThreadSpace_Sovereign_Plugin_Vision.md  ThreadSpace_Test_Fix_Checklist.md  __init__.py  api_server.py  bugfix.patch  codemap.json  codex_mirror.md  codexify.config.json  dev_check.py  diff.patch  filtered_files.txt  fix-imports-ci.patch  fix_dependencies.sh  (+19 more)
python/guardian_mcp/archive/: main.py
python/guardian_mcp/codex_memory/: ritual_test.md
python/guardian_mcp/codex_templates/: Banana_jones  standard_alias.json  standard_fieldmap.json
python/guardian_mcp/demo/: system_demo.py
python/guardian_mcp/docker/: dockerfile
python/guardian_mcp/docs/: INSTALLER.md  plugin_development.md
python/guardian_mcp/flows/: memory_log_etl_flow.py  sync_gsuite_to_notion.py
python/guardian_mcp/guardian/: __init__.py  agent_registry.json  cache.py  character_switcher.py  character_tui.py  codex_awareness.py  codexify.py  config_loader.py  contracts.py  export_engine.py  guardian_api.py  guardian_main.py  guardian_rituals.py  imprint_zero.py  imprint_zero_onboarding.py  (+13 more)
(+6765 files in other folders)
